--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: 28.02.2020
+  Changes:
+    - Update to Factorio 0.18
+
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 28.02.2020
   Changes:
